src/test/ui/parser/issue-33262.rs
// compile-flags: -Z parse-only

// Issue #33262

pub fn main() {
    for i in 0..a as { }
    //~^ ERROR expected type, found `{`
}
